Reincarnation theorem: Second lemma, first proof steps

--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -257,6 +257,23 @@ Let us write $\H_{\CMS_0}^\infty$ their intersection, $\H_{\CMS_0}^{\infty \perp
 
 \paragraphtitle{§} We can now prove the second part of the lemma: For any quantum state $\ket \Psi \in \H$ orthogonal to $\H_{\CMS_0}^\infty$, and any mental state $\cms \in \CMS$, the quantum state $\op \Pi_\cms \ket \Psi$ is orthogonal to $\H_{\CMS_0}^\infty$, too. Indeed, the supplementary subspace of $\H_{\CMS_0}^\infty$ is the orthogonal sum of its supplementary subspace in $\H_{\CMS_0}$, which is $\H_{\CMS_0}^{\infty \perp} = \operp_{\cms \in \CMS_0} \op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$, and of the supplementary subspace of $\H_{\CMS_0}$ itself, which is $\operp_{\cms \in \CMS \setminus \CMS_0} \H_\cms$. So if $\cms \notin \CMS_0$, the quantum state $\op \Pi_\cms \ket \Psi$, which belongs to $\H_\cms$, is orthogonal to $\H_{\CMS_0}$, and if $\cms \in \CMS_0$, the quantum state $\op \Pi_\cms \ket \Psi$ belongs to $\op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$, which is a subspace of $\H_{\CMS_0}^{\infty \perp}$ and is therefore orthogonal to $\H_{\CMS_0}^\infty$. For any mental state $\cms \in \CMS$, the quantum state $\op \Pi_\cms \ket \Psi$ is therefore orthogonal to $\H_{\CMS_0}^\infty$, \textit{Q.~E.~D.}
 
+\paragraphtitle{Proof of the second lemma} We will show first that, for any $n \in \IN$, the subspace $\H_{\CMS_0}^n$ is the eigenspace of $\op P_{\CMS_0}^{(n)}$ for the eigenvalue 1. This is obvious for $n = 0$, where we have $\op P_{\CMS_0}^{(0)} = \op \Pi_{\CMS_0}$ and $\H_{\CMS_0}^0 = \H_{\CMS_0}$. Let us prove first, by recurrence on $n \in \IN$, that the subspace $\H_{\CMS_0}^n$ is included in the eigenspace of $\op P_{\CMS_0}^{(n)}$ for the eigenvalue 1. As we've just seen, this assertion holds for $n = 0$. Let us suppose that the assertion is proved for a given $n \in \IN$, and let us consider a quantum state $\ket \Psi \in \H_{\CMS_0}^{n+1}$. We have per definition:
+\begin{equation*}
+\op P_{\CMS_0}^{(n+1)} \ket \Psi = \sum_{\cms_0 \in \CMS_0} \dotsc \sum_{\cms_n \in \CMS_0} \op \Pi_{\cms_0} \dop U_\tau \dotsm \op \Pi_{\cms_n} \dop U_\tau \op \Pi_{\CMS_0} \op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi
+\end{equation*}
+Since $\ket \Psi \in \H_{\CMS_0}^{n+1}$, the quantum state $\op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi$ belongs to $\H_{\CMS_0}$, and since the elementary evolution operator $\op U_\tau$ is unitary and $\op \Pi_{\cms_n}$ is a projection operator, we have $\op \Pi_{\cms_n} \dop U_\tau \op U_\tau \op \Pi_{\cms_n} = \op \Pi_{\cms_n}$, so that:
+\begin{equation*}
+\op P_{\CMS_0}^{(n+1)} \ket \Psi = \op P_{\CMS_0}^{(n)} \ket \Psi
+\end{equation*}
+Now the recurrence hypothesis yields $\op P_{\CMS_0}^{(n)} \ket \Psi = \ket \Psi$, so that $\op P_{\CMS_0}^{(n+1)} \ket \Psi = \ket \Psi$, which proves the recurrence.
+
+\paragraphtitle{§} Let us prove now, for any $n \in \IN$, the inverse inclusion of the eigenspace of $\op P_{\CMS_0}^{(n)}$ for the eigenvalue 1 in the subspace $\H_{\CMS_0}^n$. Since $\op P_{\CMS_0}^{(n)} \ket \Psi = \ket \Psi$ implies $\bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi = \braket \Psi \Psi$ for any quantum state $\ket \Psi \in \H$, it is sufficient to prove, by recurrence on $n \in \IN$, that $\bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi = \braket \Psi \Psi$ implies $\ket \Psi \in \H_{\CMS_0}^n$ for any quantum state $\ket \Psi \in \H$. We have already proved this for $n = 0$, so let us assume that the assertion holds for a given $n \in \IN$. We have per definition:
+\begin{eqnarray*}
+\bra \Psi \op P_{\CMS_0}^{(n+1)} \ket \Psi & = & \sum_{\cms_0 \in \CMS_0} \dotsc \sum_{\cms_n \in \CMS_0} \left\| \op \Pi_{\CMS_0} \op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi \right\|^2 \\
+& = & \sum_{\cms_0 \in \CMS_0} \dotsc \sum_{\cms_n \in \CMS_0} \sum_{\cms \in \CMS_0} \left\| \op U_\tau \op \Pi_\cms \op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi \right\|^2
+\end{eqnarray*}
+Now for any quantum state $\ket \Phi \in \H$, $\sum_{\cms \in \CMS_0} \| \op U_\tau \op \Pi_\cms \ket \Phi \|^2 \leq \braket \Phi \Phi$, the case of an equality happening if and only if $\ket \Phi \in \H_{\CMS_0}$. The sequence $(\bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi)$ is therefore decreasing, with an initial value $\bra \Psi \op P_{\CMS_0}^{(0)} \ket \Psi = \bra \Psi \op \Pi_{\CMS_0} \ket \Psi$, and we have $\bra \Psi \op P_{\CMS_0}^{(n+1)} \ket \Psi = \bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi$ if and only if, for all $\cms_0, \dotsc, \cms_n \in \CMS_0$, $\op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi \in \H_{\CMS_0}$. Let us suppose now that we have $\bra \Psi \op P_{\CMS_0}^{(n+1)} \ket \Psi = \braket \Psi \Psi$. This implies, because of the decrease of the sequence and of its initial vaue, that $\ket \Psi \in \H_{\CMS_0}$ and that $\bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi = \braket \Psi \Psi$. We have thus $\bra \Psi \op P_{\CMS_0}^{(n+1)} \ket \Psi = \bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi$, which implies, as we have just seen, that for all $\cms_0, \dotsc, \cms_n \in \CMS_0$, $\op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi \in \H_{\CMS_0}$. The recurrence hypothesis yielding $\ket \Psi \in \H_{\CMS_0}^n$, we have therefore $\ket \Psi \in \H_{\CMS_0}^{n+1}$, which proves the recurrence. The eigenspace of $\op P_{\CMS_0}^{(n)}$ for the eigenvalue 1 is therefore $\H_{\CMS_0}^n$ for all $n \in \IN$.
+
 %TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
 
