--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -275,13 +275,35 @@ Now the recurrence hypothesis yields $\op P_{\CMS_0}^{(n)} \ket \Psi = \ket \Psi
 Now for any quantum state $\ket \Phi \in \H$, $\sum_{\cms \in \CMS_0} \| \op U_\tau \op \Pi_\cms \ket \Phi \|^2 \leq \braket \Phi \Phi$, the case of an equality happening if and only if $\ket \Phi \in \H_{\CMS_0}$. The sequence $(\bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi)$ is therefore decreasing, with an initial value $\bra \Psi \op P_{\CMS_0}^{(0)} \ket \Psi = \bra \Psi \op \Pi_{\CMS_0} \ket \Psi$, and we have $\bra \Psi \op P_{\CMS_0}^{(n+1)} \ket \Psi = \bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi$ if and only if, for all $\cms_0, \dotsc, \cms_n \in \CMS_0$, $\op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi \in \H_{\CMS_0}$. Let us suppose now that we have $\bra \Psi \op P_{\CMS_0}^{(n+1)} \ket \Psi = \braket \Psi \Psi$. This implies, because of the decrease of the sequence and of its initial vaue, that $\ket \Psi \in \H_{\CMS_0}$ and that $\bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi = \braket \Psi \Psi$. We have thus $\bra \Psi \op P_{\CMS_0}^{(n+1)} \ket \Psi = \bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi$, which implies, as we have just seen, that for all $\cms_0, \dotsc, \cms_n \in \CMS_0$, $\op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi \in \H_{\CMS_0}$. The recurrence hypothesis yielding $\ket \Psi \in \H_{\CMS_0}^n$, we have therefore $\ket \Psi \in \H_{\CMS_0}^{n+1}$, which proves the recurrence. The eigenspace of $\op P_{\CMS_0}^{(n)}$ for the eigenvalue 1 is therefore $\H_{\CMS_0}^n$ for all $n \in \IN$.
 
 \paragraphtitle{§} Now the subspace $\H_{\CMS_0}$ being finite dimensional, there must exist a finite number of distinct nested subspaces $\H_{\CMS_0}^n$, so that there exists an integer $n_{\CMS_0}$ such that:
-\begin{equation}
+\begin{equation*}
 n_{\CMS_0} \eqdef \min \{ n \in \IN\ |\ \H_{\CMS_0}^n = \H_{\CMS_0}^\infty \}
-\end{equation}
-The eigenspace of $\op P_{\CMS_0}^{(n)}$ for the eigenvalue 1 is therefore $\H_{\CMS_0}^\infty$ for any $n \geq n_{\CMS_0}$. Since $\op P_{\CMS_0}^{(n)}$ induces an hermitian operator on $\H_{\CMS_0}$, it induces also, for $n \geq n_{\CMS_0}$, an hermitian operator on the supplementary subspace $\H_{\CMS_0}^{\infty \perp}$ of its eigenspace $\H_{\CMS_0}^\infty$. It is diagonalizable on an orthogonal basis of $\H_{\CMS_0}^{\infty \perp}$, with a finite number of real eigenvalues, which are all lying in the interval $[0, 1[$. There exists therefore a number $p_{\CMS_0} \in [0, 1[$ such that $p_{\CMS_0}^{n_{\CMS_0}}$ be the greatest eigenvalue of this operator, which can be defined by:
-\begin{equation}
+\end{equation*}
+The eigenspace of $\op P_{\CMS_0}^{(n)}$ for the eigenvalue 1 is therefore $\H_{\CMS_0}^\infty$ for any $n \geq n_{\CMS_0}$. In the special case where $n_{\CMS_0} = 0$, we have $\op P_{\CMS_0}^{(n)} = \op \Pi_{\H_{\CMS_0}^\infty}$ for all $n \in \IN$, so that the sequence $(\op P_{\CMS_0}^{(n)})$ trivially converges towards $\op \Pi_{\H_{\CMS_0}^\infty}$. Let us assume from now on that we have $n_{\CMS_0} \geq 1$. Since $\op P_{\CMS_0}^{(n)}$ induces an hermitian operator on $\H_{\CMS_0}$, it induces also, for $n \geq n_{\CMS_0}$, an hermitian operator on the supplementary subspace $\H_{\CMS_0}^{\infty \perp}$ of its eigenspace $\H_{\CMS_0}^\infty$. It is diagonalizable on an orthogonal basis of $\H_{\CMS_0}^{\infty \perp}$, with a finite number of real eigenvalues, which are all lying in the interval $[0, 1[$. There exists therefore a number $p_{\CMS_0} \in [0, 1[$ such that $p_{\CMS_0}^{n_{\CMS_0}}$ be the greatest eigenvalue of this operator, which can be defined by:
+\begin{equation*}
 p_{\CMS_0}^{n_{\CMS_0}} \eqdef \max \{ \bra \Psi \op P_{\CMS_0}^{(n_{\CMS_0})} \ket \Psi / \braket \Psi \Psi \ |\ \ket \Psi \in \H_{\CMS_0}^{\infty \perp} \setminus \{ 0 \} \}
-\end{equation}
+\end{equation*}
+
+\paragraphtitle{§} For any initial quantum state $\ket \Psi \in \H_{\CMS_0}^{\infty \perp}$, $\bra \Psi \op P_{\CMS_0}^{(n_{\CMS_0})} \ket \Psi / \braket \Psi \Psi$ represents the probability that the quantum state be in $\H_{\CMS_0}$ at all times 0, ..., $n_{\CMS_0}$. Now, as we have seen in the first lemma, the quantum state at time $n_{\CMS_0}$ will still be orthogonal to $\H_{\CMS_0}^\infty$, since it is of the form $\op \Pi_{\cms_{n_{\CMS_0}}} \op U_\tau \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi$ for a given sequence of mental states $\cms_0, \dotsc, \cms_{n_{\CMS_0}} \in \CMS_0$. It belongs therefore to $\H_{\CMS_0}^{\infty \perp}$, so that the probability that it stays in $\H_{\CMS_0}$ for another $n_{\CMS_0}$ time steps is at most $p_{\CMS_0}^{n_{\CMS_0}}$, too. We have therefore:
+\begin{equation*}
+\bra \Psi \op P_{\CMS_0}^{(2 n_{\CMS_0})} \ket \Psi / \braket \Psi \Psi \leq p_{\CMS_0}^{2 n_{\CMS_0}}
+\end{equation*}
+As we have seen, $\bra \Psi \op P_{\CMS_0}^{(t)} \ket \Psi / \braket \Psi \Psi$ is a decreasing function of $t$, so that we have more generally, for any $t \in \IN$:
+\begin{equation*}
+\bra \Psi \op P_{\CMS_0}^{(t)} \ket \Psi / \braket \Psi \Psi \leq p_{\CMS_0}^{n_{\CMS_0} \lfloor t / n_{\CMS_0} \rfloor}
+\end{equation*}
+where $\lfloor \cdot \rfloor$ denotes the floor function. 
+
+\paragraphtitle{§} Let $(\ket {\Psi_i})$ be an orthonormal basis of the subspace $\H_{\CMS_0}^{\infty \perp}$. The partial trace of the operator $\op P_{\CMS_0}^{(t)}$ on this subspace is given, for any $t \in \IN$, by: 
+\begin{equation*}
+\mathrm{Tr}_{\H_{\CMS_0}^{\infty \perp}} \op P_{\CMS_0}^{(t)} = \sum_i \bra {\Psi_i} \op P_{\CMS_0}^{(t)} \ket {\Psi_i}
+\end{equation*}
+so that we have:
+\begin{equation*}
+\mathrm{Tr}_{\H_{\CMS_0}^{\infty \perp}} \op P_{\CMS_0}^{(t)} \leq p_{\CMS_0}^{n_{\CMS_0} \lfloor t / n_{\CMS_0}  \rfloor} \dim \H_{\CMS_0}^{\infty \perp} \xrightarrow{t \to \infty} 0
+\end{equation*}
+Now this partial trace is the sum of the eigenvalues multiplied by the dimension of the respective eigenspace, and all these eigenvalues are positive. The greatest eigenvalue of $\op P_{\CMS_0}^{(t)}$ on $\H_{\CMS_0}^{\infty \perp}$ converges therefore towards 0, too, which proves that the sequence of operators $(\op P_{\CMS_0}^{(t)})$ converges towards 0 on this subspace.
+
+\paragraphtitle{§} We have already seen the eigenspace of $\op P_{\CMS_0}^{(t)}$ for the eigenvalue 1 is $\H_{\CMS_0}^\infty$ for any $t \geq n_{\CMS_0}$, and that the operator induced on $\H_{\CMS_0}^{\infty \perp}$ converges towards 0. Furthermore, for any quantum state $\ket \Psi$ orthogonal to the subspace $\H_{\CMS_0}$, we have $\op P_{\CMS_0}^{(t)} \ket \Psi = 0$. The sequence of operators $(\op P_{\CMS_0}^{(t)})$ converges therefore towards $\op \Pi_{\H_{\CMS_0}^\infty}$, \textit{Q.~E.~D.}
 
 %TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
