--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -197,7 +197,7 @@ Now we've already seen that, for any quantum state $\ket{\Psi}$ orthogonal to $\
 \end{equation*}
 Any eventually dying sequence is therefore infinitely improbable, \textit{Q.~E.~D.}
 
-\paragraphtitle{Remark} This result is actually a quite intuitive consequence of the finite dimensionality of the Hilbert space $\H$. Precisely, the key argument -- the compacity of the unit sphere of $\H_\cms^{\infty \perp}$ -- requires that these subspaces -- the ``accessible'' part of the mental subspaces -- be finite dimensional. This condition being given, the result would still hold if the ``inaccessible'' part $\H_\cms^\infty$ of the mental subspaces were infinite dimensional, and/or if there were an infinite number of possible mental states.
+\paragraphtitle{Remark} This result is actually a quite intuitive consequence of the finite dimensionality of the Hilbert space $\H$. Precisely, the key argument -- the compactness of the unit sphere of $\H_\cms^{\infty \perp}$ -- requires that these subspaces -- the ``accessible'' part of the mental subspaces -- be finite dimensional. This condition being given, the result would still hold if the ``inaccessible'' part $\H_\cms^\infty$ of the mental subspaces were infinite dimensional, and/or if there were an infinite number of possible mental states.
 
 \paragraphtitle{Theorem} No quantum state is mortal.
 
@@ -205,7 +205,7 @@ Any eventually dying sequence is therefore infinitely improbable, \textit{Q.~E.~
 
 \paragraphtitle{Corollary} There will be with certainty extra-terrestrial forms of conscious life.
 
-\paragraphtitle{Proof} The mental state $\cms_{t_1}$ we are experiencing right now at time $t_1$ is presumably not the only mental state we have ever experienced, so we take for granted that there has already been a time $t_0 < t_1$ in the past where a mental state $\cms_{t_0} \neq \cms_{t_1}$ has been experienced. The probability that we keep experiencing the same mental state $\cms_{t_1}$ forever from now on can be expessed as a conditional probability of the form:
+\paragraphtitle{Proof} The mental state $\cms_{t_1}$ we are experiencing right now at time $t_1$ is presumably not the only mental state we have ever experienced, so we take for granted that there has already been a time $t_0 < t_1$ in the past where a mental state $\cms_{t_0} \neq \cms_{t_1}$ has been experienced. The probability that we keep experiencing the same mental state $\cms_{t_1}$ forever from now on can be expressed as a conditional probability of the form:
 \begin{equation*}
 \lim_{t \to \infty} \mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i}) / \mathrm P_{t_1}(\cms_0, \dotsc, \cms_{t_1}; \ket{\Psi_i})
 \end{equation*}
@@ -233,7 +233,7 @@ Finally, let us define by recurrence, for any $n \in \IN$, the subspaces $\H_{\C
 \begin{equation*}
 \H_{\CMS_0}^{n+1} \eqdef \H_{\CMS_0}^n \cap \{ \ket \Psi \in \H\ |\ \forall \cms_0, \dotsc, \cms_n \in \CMS_0,\ \op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi \in \H_{\CMS_0} \}
 \end{equation*}
-Let us write $\H_{\CMS_0}^\infty$ their intersection, $\H_{\CMS_0}^{\infty \perp}$ its supplementary subspace in $\H_{\CMS_0}$, and $\op \Pi_{\H_{\CMS_0}^\infty}$ the orthogonal projection oerator on $\H_{\CMS_0}^\infty$.
+Let us write $\H_{\CMS_0}^\infty$ their intersection, $\H_{\CMS_0}^{\infty \perp}$ its supplementary subspace in $\H_{\CMS_0}$, and $\op \Pi_{\H_{\CMS_0}^\infty}$ the orthogonal projection operator on $\H_{\CMS_0}^\infty$.
 
 \paragraphtitle{Remarks} For any initial quantum state $\ket \Psi \neq 0$, $\bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi / \braket \Psi \Psi$ represents the probability that the experienced mental state belongs to $\CMS_0$ at all times $t = 0, \dotsc, n$. The operators $\op P_{\CMS_0}^{(n)}$ are hermitian and therefore diagonalizable on an orthogonal basis with real eigenvalues; these eigenvalues being probabilities, they lie between 0 and 1. The eigenspace for the eigenvalue 1 can be easily identified with $\H_{\CMS_0}^n$. The subspace $\H_{\CMS_0}^\infty$ is therefore the set of all initial quantum states for which the experienced mental state belongs with certainty to $\CMS_0$ at all times.
 
@@ -253,7 +253,7 @@ Let us write $\H_{\CMS_0}^\infty$ their intersection, $\H_{\CMS_0}^{\infty \perp
 
 \paragraphtitle{§} This will allow us to prove that the subspace $\H_{\CMS_0}^\infty$ can be decomposed as the orthogonal sum of its projections $\op \Pi_\cms \H_{\CMS_0}^\infty$ for $\cms \in \CMS_0$. This sum is orthogonal since the projections are included in the orthogonal subspaces $\H_\cms$, respectively. It is obvious that $\H_{\CMS_0}^\infty$ is included in the sum, since any quantum state $\ket \Psi \in \H_{\CMS_0}^\infty$ belongs in particular to $\H_{\CMS_0}$, so that $\ket \Psi = \op \Pi_{\CMS_0} \ket \Psi = \sum_{\cms \in \CMS_0} \op \Pi_\cms \ket \Psi$. The inverse inclusion also holds since, as we have just seen, the projections are subspaces of $\H_{\CMS_0}^\infty$. We have therefore $\H_{\CMS_0}^\infty = \operp_{\cms \in \CMS_0} \op \Pi_\cms \H_{\CMS_0}^\infty$.
 
-\paragraphtitle{§} We can conclude from this result that the subspace $\H_{\CMS_0}^{\infty \perp}$ can be decomposed too as the orthogonal sum of its projections $\op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$ for $\cms \in \CMS_0$. Indeed, the subspace $\H_{\CMS_0}$ being the orthogonal sum of the mental subspaces $\H_\cms$ for $\cms \in \CMS_0$, and the orthogonal components $\op \Pi_\cms \H_{\CMS_0}^\infty$ of $\H_{\CMS_0}^\infty$ being respectively included in the mental subspaces $\H_\cms$, the supplemantary subspace of $\H_{\CMS_0}^\infty$ in $\H_{\CMS_0}$ can be decomposed as the orthogonal sum of the respective supplementary subspaces of $\op \Pi_\cms \H_{\CMS_0}^\infty$ in $\H_\cms$ -- which are therefore its respective projections on the mental subspaces $\H_\cms$. We have therefore $\H_{\CMS_0}^{\infty \perp} = \operp_{\cms \in \CMS_0} \op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$.
+\paragraphtitle{§} We can conclude from this result that the subspace $\H_{\CMS_0}^{\infty \perp}$ can be decomposed too as the orthogonal sum of its projections $\op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$ for $\cms \in \CMS_0$. Indeed, the subspace $\H_{\CMS_0}$ being the orthogonal sum of the mental subspaces $\H_\cms$ for $\cms \in \CMS_0$, and the orthogonal components $\op \Pi_\cms \H_{\CMS_0}^\infty$ of $\H_{\CMS_0}^\infty$ being respectively included in the mental subspaces $\H_\cms$, the supplementary subspace of $\H_{\CMS_0}^\infty$ in $\H_{\CMS_0}$ can be decomposed as the orthogonal sum of the respective supplementary subspaces of $\op \Pi_\cms \H_{\CMS_0}^\infty$ in $\H_\cms$ -- which are therefore its respective projections on the mental subspaces $\H_\cms$. We have therefore $\H_{\CMS_0}^{\infty \perp} = \operp_{\cms \in \CMS_0} \op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$.
 
 \paragraphtitle{§} We can now prove the second part of the lemma: For any quantum state $\ket \Psi \in \H$ orthogonal to $\H_{\CMS_0}^\infty$, and any mental state $\cms \in \CMS$, the quantum state $\op \Pi_\cms \ket \Psi$ is orthogonal to $\H_{\CMS_0}^\infty$, too. Indeed, the supplementary subspace of $\H_{\CMS_0}^\infty$ is the orthogonal sum of its supplementary subspace in $\H_{\CMS_0}$, which is $\H_{\CMS_0}^{\infty \perp} = \operp_{\cms \in \CMS_0} \op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$, and of the supplementary subspace of $\H_{\CMS_0}$ itself, which is $\operp_{\cms \in \CMS \setminus \CMS_0} \H_\cms$. So if $\cms \notin \CMS_0$, the quantum state $\op \Pi_\cms \ket \Psi$, which belongs to $\H_\cms$, is orthogonal to $\H_{\CMS_0}$, and if $\cms \in \CMS_0$, the quantum state $\op \Pi_\cms \ket \Psi$ belongs to $\op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$, which is a subspace of $\H_{\CMS_0}^{\infty \perp}$ and is therefore orthogonal to $\H_{\CMS_0}^\infty$. For any mental state $\cms \in \CMS$, the quantum state $\op \Pi_\cms \ket \Psi$ is therefore orthogonal to $\H_{\CMS_0}^\infty$, \textit{Q.~E.~D.}
 
@@ -272,7 +272,7 @@ Now the recurrence hypothesis yields $\op P_{\CMS_0}^{(n)} \ket \Psi = \ket \Psi
 \bra \Psi \op P_{\CMS_0}^{(n+1)} \ket \Psi & = & \sum_{\cms_0 \in \CMS_0} \dotsc \sum_{\cms_n \in \CMS_0} \left\| \op \Pi_{\CMS_0} \op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi \right\|^2 \\
 & = & \sum_{\cms_0 \in \CMS_0} \dotsc \sum_{\cms_n \in \CMS_0} \sum_{\cms \in \CMS_0} \left\| \op U_\tau \op \Pi_\cms \op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi \right\|^2
 \end{eqnarray*}
-Now for any quantum state $\ket \Phi \in \H$, $\sum_{\cms \in \CMS_0} \| \op U_\tau \op \Pi_\cms \ket \Phi \|^2 \leq \braket \Phi \Phi$, the case of an equality happening if and only if $\ket \Phi \in \H_{\CMS_0}$. The sequence $(\bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi)$ is therefore decreasing, with an initial value $\bra \Psi \op P_{\CMS_0}^{(0)} \ket \Psi = \bra \Psi \op \Pi_{\CMS_0} \ket \Psi$, and we have $\bra \Psi \op P_{\CMS_0}^{(n+1)} \ket \Psi = \bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi$ if and only if, for all $\cms_0, \dotsc, \cms_n \in \CMS_0$, $\op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi \in \H_{\CMS_0}$. Let us suppose now that we have $\bra \Psi \op P_{\CMS_0}^{(n+1)} \ket \Psi = \braket \Psi \Psi$. This implies, because of the decrease of the sequence and of its initial vaue, that $\ket \Psi \in \H_{\CMS_0}$ and that $\bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi = \braket \Psi \Psi$. We have thus $\bra \Psi \op P_{\CMS_0}^{(n+1)} \ket \Psi = \bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi$, which implies, as we have just seen, that for all $\cms_0, \dotsc, \cms_n \in \CMS_0$, $\op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi \in \H_{\CMS_0}$. The recurrence hypothesis yielding $\ket \Psi \in \H_{\CMS_0}^n$, we have therefore $\ket \Psi \in \H_{\CMS_0}^{n+1}$, which proves the recurrence. The eigenspace of $\op P_{\CMS_0}^{(n)}$ for the eigenvalue 1 is therefore $\H_{\CMS_0}^n$ for all $n \in \IN$.
+Now for any quantum state $\ket \Phi \in \H$, $\sum_{\cms \in \CMS_0} \| \op U_\tau \op \Pi_\cms \ket \Phi \|^2 \leq \braket \Phi \Phi$, the case of an equality happening if and only if $\ket \Phi \in \H_{\CMS_0}$. The sequence $(\bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi)$ is therefore decreasing, with an initial value $\bra \Psi \op P_{\CMS_0}^{(0)} \ket \Psi = \bra \Psi \op \Pi_{\CMS_0} \ket \Psi$, and we have $\bra \Psi \op P_{\CMS_0}^{(n+1)} \ket \Psi = \bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi$ if and only if, for all $\cms_0, \dotsc, \cms_n \in \CMS_0$, $\op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi \in \H_{\CMS_0}$. Let us suppose now that we have $\bra \Psi \op P_{\CMS_0}^{(n+1)} \ket \Psi = \braket \Psi \Psi$. This implies, because of the decrease of the sequence and of its initial value, that $\ket \Psi \in \H_{\CMS_0}$ and that $\bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi = \braket \Psi \Psi$. We have thus $\bra \Psi \op P_{\CMS_0}^{(n+1)} \ket \Psi = \bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi$, which implies, as we have just seen, that for all $\cms_0, \dotsc, \cms_n \in \CMS_0$, $\op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi \in \H_{\CMS_0}$. The recurrence hypothesis yielding $\ket \Psi \in \H_{\CMS_0}^n$, we have therefore $\ket \Psi \in \H_{\CMS_0}^{n+1}$, which proves the recurrence. The eigenspace of $\op P_{\CMS_0}^{(n)}$ for the eigenvalue 1 is therefore $\H_{\CMS_0}^n$ for all $n \in \IN$.
 
 \paragraphtitle{§} Now the subspace $\H_{\CMS_0}$ being finite dimensional, there must exist a finite number of distinct nested subspaces $\H_{\CMS_0}^n$, so that there exists an integer $n_{\CMS_0}$ such that:
 \begin{equation*}
