--- a/frontmatter-title-page.tex
+++ b/frontmatter-title-page.tex
@@ -6,8 +6,7 @@
 {\Huge \textbf{Quantum\\Ethics}}
 \vskip 1.2cm
 A Spinozist Interpretation\\
-of Constructive Quantum Field Theory\\
-on the Lattice
+of Lattice Quantum Field Theory
 \vskip 2cm
 {\large Sébastien Fauvel}
 \end{center}
