--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -323,6 +323,8 @@ p_t \xrightarrow{t \to \infty} 1
 \end{equation*}
 The initial mental state $\cms_i$ will therefore be experienced again in the future with certainty,  \textit{Q.~E.~D.}
 
+\paragraphtitle{Remark} This proof of the reincarnation theorem relies on the hypothesis that the Hilbert space be finite dimensional. This assumption could be relaxed a little and reduced to the hypothesis that the set of all mental states accessible from the initial quantum state -- that it, the last mental states $\cms_n$ of sequences $\cms_0, \dotsc, \cms_n$ such that $\op \Pi_{\cms_n} \op U_\tau \dotsm \op \Pi_{\cms_0} \op U_\tau \ket \Psi \neq 0$ -- be finite, and the corresponding mental subspaces finite dimensional.
+
 %TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
 
