Added first commentary paragraph

--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -325,6 +325,8 @@ The initial mental state $\cms_i$ will therefore be experienced again in the fut
 
 \paragraphtitle{Remark} This proof of the reincarnation theorem relies on the hypothesis that the Hilbert space be finite dimensional. This assumption could be relaxed a little and reduced to the hypothesis that the set of all mental states accessible from the initial quantum state -- that it, the last mental states $\cms_n$ of sequences $\cms_0, \dotsc, \cms_n$ such that $\op \Pi_{\cms_n} \op U_\tau \dotsm \op \Pi_{\cms_0} \op U_\tau \ket \Psi \neq 0$ -- be finite, and the corresponding mental subspaces finite dimensional.
 
+\paragraphtitle{Commentaries} Once again, we are addressing here philosophical, or rather spiritual questions which could not even be expressed in the frame of any scientific theory so far. The reincarnation theorem has been derived with the greatest possible formal rigor, so that it is firmly established upon its foundations, which are compatible with everything we know about quantum physics today. So rejecting without any further discussion the notion of ``reincarnation'' considered in this theorem -- the recurrence of mental states -- in no scientifically valid option any more. But it is important in the first place to clarify what the theorem exactly means in order to avoid misunderstandings. In a monist framework, contrary to the dualist conceptions of most religions supporting the idea of reincarnation, there is no mental entity like a soul which could be reincarnated in another body after the death of the last one. The only thing that can be ``incarnated'' are mental states, \textit{i.e.} the totality of all subjective experiences taking place at a given instant. And a mental state is being experienced whenever the quantum state, representing the state of affairs in the whole universe at the material level, becomes projected into the corresponding mental subspace, in which there is exactly one brain presenting the corresponding activity pattern for each subjective experience in the mental state. This projection, or ``collapse'', is a stochastic process following the Born rule, which has been validated uncountable times by all quantum experiments. Now the theorem states that, once a mental state has been experienced, the probability that, in the natural evolution of the physical state via physical interactions and collapse processes, this mental state be never experienced again, vanishes in the limit of an infinitely long time. So if we take for granted the fact that the physical state will keep evolving forever the way it does today, -- and in particular if there is no sudden and unpredictable ``end of the world'' standing before us, -- it is certain that a mental state that has been experienced once will be experienced again in the future. This is all the reincarnation theorem is stating; it is a mere recurrence theorem for mental states, quite similar in this respect to the Poincaré recurrence theorem for the state of classical systems in Hamiltonian dynamics. But it is not a recurrence theorem for quantum states: The same mental state can be experienced in an infinite number of different quantum states belonging to the corresponding mental subspace, and even quantum states that differ very slightly from another can yield to very different evolutions on the long term, as we know from Quantum Chaos Theory.
+
 %TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
 
