Added citation of Friedman's original article.

--- a/backmatter-bibliography.tex
+++ b/backmatter-bibliography.tex
@@ -20,6 +20,8 @@
 
 \bibitem{Freedman2001} Freedman, W. L.; et al. (2001). \htmladdnormallink{\textit{Final Results from the Hubble Space Telescope Key Project to Measure the Hubble Constant}}{http://arxiv.org/abs/astro-ph/0012376v1}. The Astrophysical Journal 553 (1): 47–72, IOP Publishing, Bristol (United Kingdom), 2001.
 
+\bibitem{Friedman1922} Friedman, A. (1922). \textit{Über die Krümmung des Raumes}. Zeitschrift für Physik A 10 (1): 377–386, Springer, Berlin (Germany), 1922.
+
 \bibitem{Hermanns1983} Hermanns, W. (1983). \textit{Einstein and the Poet: In Search of the Cosmic Man}. Branden Press, Boston (Massachusetts, United States), 1983.
 
 \bibitem{Kogut1993} Kogut, A.; et al. (1993). \htmladdnormallink{\textit{Dipole Anisotropy in the COBE Differential Microwave Radiometers First-Year Sky Maps}}{http://arxiv.org/abs/astro-ph/9312056v1}. The Astrophysical Journal 419: 1–6, IOP Publishing, Bristol (United Kingdom), 1993.
@@ -28,7 +30,7 @@
 
 \bibitem{Marin2009} Marin, J. M. (2009). \htmladdnormallink{\textit{‘Mysticism’ in quantum mechanics: the forgotten controversy}}{http://harvard.academia.edu/JuanMiguelMarin/Papers/204341}. European Journal of Physics 30: 807-822, IOP Publishing, Bristol (United Kingdom), 2009.
 
-\bibitem{Neumann1932} Neumann, J. v. (1932). \textit{Mathematische Grundlagen der Quantenmechanik}. Julius Springer, Berlin (Germany), 1932. \textit{Mathematical Foundations of Quantum Mechanics}. Princeton University Press, Princeton (New Jersey, United States), 1955.
+\bibitem{Neumann1932} Neumann, J. v. (1932). \textit{Mathematische Grundlagen der Quantenmechanik}. Springer, Berlin (Germany), 1932. \textit{Mathematical Foundations of Quantum Mechanics}. Princeton University Press, Princeton (New Jersey, United States), 1955.
 
 \bibitem{Rabin1981} Rabin, J. M. (1981). \htmladdnormallink{\textit{Long Range Interactions In Lattice Field Theory}}{http://www.slac.stanford.edu/pubs/slacreports/slac-r-240.html}. Ph.D. Thesis SLAC-0240, Stanford (California, United States), 1981.
 
